# MS2DECIDE_article_data

./: .gitignore  .gitmodules  README.adoc  README.md
Elicitation/: Answers.csv  Answers.ods  Answers.tsv  AnswersDual.csv  AnswersDual.ods  AnswersDual.tsv  Cases.csv  Cases.ods  Cases.tsv
Extractor/: .gitignore  README.adoc  pyproject.toml
Extractor/src/: Compounds joined.ipynb  Counts.ipynb  Notebook.ipynb  Task.ipynb  Untitled.ipynb
Extractor/src/extractor/: compounds.py  datadirs.py  elicitation.py  extractor.py  gnps.py  mgf.py  mgfs.py  network.py  sender.py  support.py  write_tasks.py
Extractor/src/extractor/manufactured/: datadirs.py  extractor.py  mgfs.py  sender.py
Extractor/src/extractor/pleiocarpa/: datadirs.py  extractor.py
Extractor/src/extractor/pleiokomenine/: extractor.py
Extractor/tests/: test_doier.py  test_gnps.py  test_parse_html.py  test_support.py  test_various.py
Extractor/tests/resources/: Alchorneine.mgf  Pleiocarpa.mgf  status 1c3cbef069874546aca7cca96cb01a05.json  status fake not done.json
Manufactured case/: All GNPS.mgf  All Matchms.mgf  Chemodiverse_compound_k_annotation.tsv  Compounds.tsv  Gnps task ids.json  Sirius_command.txt  mgf_sirius - Copie.mgf  mgf_sirius.mgf  ranking by tool.tsv
Manufactured case with GNPS2/job off gnps2 mass=10 peaks=6/: merged_results_with_gnps.tsv
Manufactured case with GNPS2/res/: manufactured with appriximateScore isdb_tol=0.02.tsv  manufactured with exactScore isdb_tol=0.002.tsv  manufactured with exactScore isdb_tol=0.02.tsv
Manufactured case/Exported_manufactured case_ordered/: manufactured.mgf
Manufactured case/Exported_manufactured_case_ordered4/: manufactured.mgf
Manufactured case/Exported_manufactured_case_ordered5/: manufactured.mgf
Manufactured case/FBMN/: 13-hydroxylupanine.mgf  3-beta-MeAmino20-oxo-5-pregnene.mgf  3-beta-amino-pregnane.mgf  3-beta-dimethylamino-20-beta-hydroxy-5-pregnene.mgf  Alchorneine.mgf  Anantine.mgf  Ancistroealaine A.mgf  Annomontine.mgf  Asaronaldehyde.mgf  Baleabuxidine.mgf  Bursehernine.mgf  Caffeic acid.mgf  Caffeine.mgf  Chimonanthine.mgf  Cinegalline.mgf  Cineverine.mgf  Cleistopholine.mgf  Conarrhimine.mgf  Conessine.mgf  Conimine.mgf  Corydaldin.mgf  Cyanidol.mgf  Cycloamanide A.mgf  Cynodine.mgf  Cytisine.mgf  Dehydrovomifoliol.mgf  Deoxopodophyllotoxine.mgf  Desoxofuntumine.mgf  Digoxigenin.mgf  Dihydrotriacanthine.mgf  Dimethylipecoside.mgf  Eserine.mgf  Funtumine.mgf  Ginkgolide A.mgf  Ginkgolide B.mgf  Ginkgolide C.mgf  Gitoxigenine.mgf  Gitoxin.mgf  Holafebrine.mgf  Holamine.mgf  (+56 more)
Manufactured case/FERMO/: novelty_scores.csv
Manufactured case/GNPS Tasks/: Gnps task ids.json
Manufactured case/MZmine/: All MZmine cut Sirius.mgf
Manufactured case/Mgf files/: 13-hydroxylupanine.mgf  3-beta-amino-pregnane.mgf  Acistroealaine A.mgf  Anantine.mgf  (+105 more)
Pleiocarpa case/: Adducts.tsv  Descriptors.tsv  Pleiocarpa_annotation.tsv
(+371 files in other folders)
