[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.7"
name = "extractor"
version = "0.0.1"
dependencies = ["rdkit", "matchms", "numpy", "pandas", "requests", "PyGithub", "jupyter", "pytest", "responses"]

[project.scripts]
manuf-clean = "extractor.manufactured.extractor:clean"
manuf-geninput = "extractor.manufactured.extractor:generate_gnps_input"
manuf-send = "extractor.manufactured.sender:send"
manuf-gensummary = "extractor.manufactured.extractor:generate_summary"
manuf-genarticle = "extractor.manufactured.extractor:generate_article_data"
pleio-gensummary = "extractor.pleiocarpa.extractor:generate_summary"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
